Correction pour l'affichage des pages, on ne voyait pas de scrollbar

--- a/admission/static/css/custom.css
+++ b/admission/static/css/custom.css
@@ -1,3 +1,6 @@
+body {
+  padding-top: 70px;
+}
 .error {
   color:red;
 }
